--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,6 +8,32 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+        # 체크아웃 해야 최신 코드를 가져옴
+      - name: Check out the codes
+        uses: actions/checkout@v2
+
+        # 파이썬 설치
+      - name: Setup python environment
+        id: setup-python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.12.6'
+
+        # 타임존 KST로 설정
+      - name: Set timezone to KST
+        run: |
+          sudo rm /etc/localtime
+          sudo ln -s /usr/share/zoneinfo/Asia/Seoul /etc/localtime
+
+      - name: Install Poetry
+        run: |
+          curl -sSL curl -sSL https://install.python-poetry.org | python3 -
+          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+
+      - name: Install dependencies
+        run: | # poetry 자기 자신을 설치하지 않음
+          poetry install --no-root
+
       - name: Run black
         run: |
           poetry run black . --check
