--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,9 @@ build-backend = "poetry.core.masonry.api"
 black = "^25.1.0"
 isort = "^6.0.0"
 
+[tool.black]
+line-length = 120
+
+[tool.isort]
+profile = "black"
+
