--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "django-soft-delete (>=1.0.18,<2.0.0)",
     "drf-spectacular (>=0.28.0,<0.29.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
-    "pillow (>=11.1.0,<12.0.0)"
+    "pillow (>=11.1.0,<12.0.0)",
+    "django-redis (>=5.4.0,<6.0.0)"
 ]
 
 
