:white_check_mark: CD test

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Setup SSH Key
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" | base64 --decode > ~/.ssh/id-rsa
-          chmod 600 ~/.shh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
       - name: Deploy to Server NCP
         uses: appleboy/ssh-action@v1.2.2
