--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,20 +31,12 @@ jobs:
           docker push ${{ secrets.DOCKERHUB_NAME }}/oz_joint_dev:latest
           docker push ${{ secrets.DOCKERHUB_NAME }}/oz_joint_nginx:latest
 
-      - name: Setup SSH Key
-        run: |
-          mkdir -p ~/.ssh
-          ls -la ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | base64 --decode > ~/.ssh/id_rsa
-          ls -la ~/.ssh
-          chmod 600 ~/.ssh/id_rsa
-
       - name: Deploy to Server NCP
         uses: appleboy/ssh-action@v1.2.2
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          key_path: /home/runner/.ssh/id_rsa
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd app
             docker pull ${{ secrets.DOCKERHUB_NAME }}/oz_joint_dev:latest
