--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       - develop
+    types:
+      - closed
 
 
 jobs:
@@ -17,6 +19,11 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
+      - name: Check if PR was merged
+        if: github.event.pull_request.merged == true
+        run: |
+          echo "PR was merged. Proceeding with deployment."
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
