--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "django-redis (>=5.4.0,<6.0.0)",
     "django-storages (>=1.14.5,<2.0.0)",
     "boto3 (==1.35.99)"
+    "django-redis (>=5.4.0,<6.0.0)",
+    "django-allauth (>=65.4.1,<66.0.0)"
 ]
 
 
