--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "drf-spectacular (>=0.28.0,<0.29.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
     "pillow (>=11.1.0,<12.0.0)",
-    "django-redis (>=5.4.0,<6.0.0)"
+    "django-redis (>=5.4.0,<6.0.0)",
+    "django-storages (>=1.14.5,<2.0.0)",
+    "boto3 (==1.35.99)"
 ]
 
 
