--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "pillow (>=11.1.0,<12.0.0)",
     "django-redis (>=5.4.0,<6.0.0)",
     "django-storages (>=1.14.5,<2.0.0)",
-    "boto3 (==1.35.99)"
+    "boto3 (==1.35.99)",
     "django-redis (>=5.4.0,<6.0.0)",
     "django-allauth (>=65.4.1,<66.0.0)"
 ]
