--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,13 @@ jobs:
       - name: Check if PR was merged
         if: github.event.pull_request.merged == true
         run: |
-          echo "PR was merged. Proceeding with deployment."
+          echo "The PR was merged. Proceeding..."
+
+      - name: Cancel workflow if not merged
+        if: github.event.pull_request.merged != true
+        run: |
+          echo "The PR was not merged. Exiting..."
+          exit 1
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
