--- a/resources/nginx/nginx.conf
+++ b/resources/nginx/nginx.conf
@@ -1,6 +1,32 @@
 server {
     listen 80;
-    server_name _;
+    server_name api.umdoong.shop;
+    # certbot에서 유효한지 확인
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        allow all;
+    }
+
+    # path
+    location /{
+        return 301 https://$server_name$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name api.umdoong.shop;
+    ssl_certificate /etc/letsencrypt/live/umdoong.shop/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/umdoong.shop/privkey.pem;
+
+        location /admin/courses/chaptervideo/add/ {
+        proxy_pass http://django:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        client_max_body_size 1G;
+    }
 
     location / {
         proxy_pass http://django:8000;
