:sparkles: postgres 13 -> 14 버전 업글

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - app_network
 
   db: # postgresql
-    image: postgres:13-alpine
+    image: postgres:14.15-alpine3.21
     container_name: db
     restart: always
     env_file:
